Alterando o layout -anside

--- a/BancoADS/index.html
+++ b/BancoADS/index.html
@@ -34,6 +34,13 @@
                 </div>
             </div>
         </nav>
+        <aside>
+            <h2>Patrocinios</h2>
+            <div>link 1</div>
+            <div>link 2</div>
+            <div>link 3</div>
+            <div>link 4</div>
+        </aside>
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
